# propositionalcalculus

./: .envrc  .gitignore  .pre-commit-config.yaml  404.html  README.md  flake-old.nix  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  result  run_profile.py
.github/workflows/: docs.yml
docs/: conf.py  index.md  index.rst  primeros-pasos.md
docs/logica/: index.md  reconocimiento-de-patrones.md  tablas-de-verdad.md
docs/referencia/: formula.md  formulas.md  inference.md  rule.md  table.md
grammar/: .gitignore  grammar.js  package-lock.json  package.json
grammar/corpus/: examples.txt  proof.txt  rules.txt
grammar/examples/: MP.rule  absurd.proof  example.txt
grammar/queries/: python-bindings.scm
logica/: index.html
logica/reconocimiento-de-patrones/: index.html
logica/tablas-de-verdad/: index.html
referencia/formulas/: index.html
search/: search_index.json
src/liar/: __init__.py  __main__.py  formula.py  inference.py  natural_deduction.py  proof.py  propositional_axioms.py  propositional_axioms_long.py  rule.py  table.py
src/propositionalcalculus/: __init__.py  __main__.py  formula.py  hilbert_system.py  inference.py  parser.py  propositional_axioms.py  rule.py  table.py
src/propositionalcalculus/examples/: proofs.py
tests/: conftest.py  test_formula.py  test_inference.py  test_rule.py
