[tool.poetry]
name = "propositionalcalculus"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.1"
tree-sitter = "^0.20.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.3.1"

[tool.poetry.scripts]
propositionalcalculus = 'propositionalcalculus.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
